--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Documentation 
+name: Deploy 
 on:
     push:
         branches:
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy-page:
       runs-on: ubuntu-latest
-      name: Deploy Documentation to GitHub Pages
+      name: Deploy to GitHub Pages
       steps:
         - uses: actions/checkout@v3
         - uses: actions/setup-node@v3
