--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           uses: peaceiris/actions-gh-pages@v3
           with:
             github_token: ${{ secrets.GH_ACTIONS_TOKEN }}
-            publish_dir: ./build
+            publish_dir: ./dist
             publish_branch: gh-pages
             user_name: github-actions[bot]
             user_email: 41898282+github-actions[bot]@users.noreply.github.com
