--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mapcomponents/react-maplibre": "^0.1.80",
+    "@supabase/supabase-js": "^2.39.3",
     "@types/node": "^20.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
